--- a/Index .ipynb
+++ b/Index .ipynb
@@ -1,8 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Importing all the necessary libraries."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataclasses import dataclass, field\n",
+    "from typing import Dict, List, Tuple\n",
+    "import math\n",
+    "from copy import deepcopy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -18,10 +37,6 @@
     }
    ],
    "source": [
-    "from dataclasses import dataclass, field\n",
-    "from typing import Dict, List, Tuple\n",
-    "import math\n",
-    "\n",
     "PILLARS = [\"T\", \"X\", \"F\", \"S\"]  # Trade, Tech, Finance, Strategic\n",
     "\n",
     "@dataclass\n",
@@ -121,7 +136,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F5: p=0.66 | dAI_up=-0.833 | dAI_down=0.833 | max|ΔAI|=0.833 (up)\n",
+      "F4: p=0.08 | dAI_up=0.729 | dAI_down=-0.583*CLAMP* | max|ΔAI|=0.729 (up)\n",
+      "F7: p=0.45 | dAI_up=-0.625 | dAI_down=0.625 | max|ΔAI|=0.625 (up)\n",
+      "F10: p=0.88 | dAI_up=0.625 | dAI_down=-0.625 | max|ΔAI|=0.625 (down)\n",
+      "F6: p=0.64 | dAI_up=0.451 | dAI_down=-0.451 | max|ΔAI|=0.451 (down)\n",
+      "F1: p=0.68 | dAI_up=0.278 | dAI_down=-0.278 | max|ΔAI|=0.278 (down)\n",
+      "F2: p=0.22 | dAI_up=-0.278 | dAI_down=0.278 | max|ΔAI|=0.278 (up)\n",
+      "F8: p=0.95 | dAI_up=0.139*CLAMP* | dAI_down=-0.278 | max|ΔAI|=0.278 (down)\n",
+      "F9: p=0.46 | dAI_up=-0.278 | dAI_down=0.278 | max|ΔAI|=0.278 (up)\n",
+      "F3: p=0.09 | dAI_up=0.000 | dAI_down=0.000*CLAMP* | max|ΔAI|=0.000 (up)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def clamp01(x):\n",
+    "    return max(0.0, min(1.0, x))\n",
+    "\n",
+    "def perturb_events(events: List[Event], idx: int, delta: float) -> Tuple[List[Event], bool]:\n",
+    "    \"\"\"\n",
+    "    Perturb probability of event[idx] by delta (± step).\n",
+    "    Returns (new_events, clamped_flag)\n",
+    "    \"\"\"\n",
+    "    out, clamped = [], False\n",
+    "    for j, e in enumerate(events):\n",
+    "        if j == idx:\n",
+    "            new_p = e.p + delta\n",
+    "            if new_p < 0.0 or new_p > 1.0:\n",
+    "                clamped = True\n",
+    "            new_p = clamp01(new_p)\n",
+    "            out.append(Event(e.id, new_p, e.B, e.s))\n",
+    "        else:\n",
+    "            out.append(e)\n",
+    "    return out, clamped\n",
+    "\n",
+    "def sensitivity_table(events: List[Event], weights: Dict[str, float], step: float = 0.10):\n",
+    "    \"\"\"\n",
+    "    For each forecast i, compute AI with p_i up/down by 'step' (±10pp default).\n",
+    "    Includes clamped flags indicating if p_i hit 0 or 1 boundary.\n",
+    "    \"\"\"\n",
+    "    base_ai = compute_ai(events, weights)[\"AI\"]\n",
+    "    rows = []\n",
+    "    for i, e in enumerate(events):\n",
+    "        pert_up,  clamp_up  = perturb_events(events, i, +step)\n",
+    "        pert_down, clamp_down = perturb_events(events, i, -step)\n",
+    "\n",
+    "        ai_up   = compute_ai(pert_up, weights)[\"AI\"]\n",
+    "        ai_down = compute_ai(pert_down, weights)[\"AI\"]\n",
+    "\n",
+    "        d_up, d_down = ai_up - base_ai, ai_down - base_ai\n",
+    "        rows.append({\n",
+    "            \"id\": e.id,\n",
+    "            \"p\": e.p,\n",
+    "            \"AI_base\": base_ai,\n",
+    "            \"AI_up\": ai_up, \"dAI_up\": d_up, \"clamped_up\": clamp_up,\n",
+    "            \"AI_down\": ai_down, \"dAI_down\": d_down, \"clamped_down\": clamp_down,\n",
+    "            \"max_abs_dAI\": max(abs(d_up), abs(d_down)),\n",
+    "            \"direction_max\": \"up\" if abs(d_up) >= abs(d_down) else \"down\",\n",
+    "        })\n",
+    "\n",
+    "    # Sort by influence magnitude\n",
+    "    rows.sort(key=lambda r: r[\"max_abs_dAI\"], reverse=True)\n",
+    "    return rows\n",
+    "\n",
+    "# Example run\n",
+    "sens = sensitivity_table(events_data, equal_weights, step=0.10)\n",
+    "for r in sens:\n",
+    "    print(\n",
+    "        f'{r[\"id\"]}: p={r[\"p\"]:.2f} | '\n",
+    "        f'dAI_up={r[\"dAI_up\"]:.3f}{\"*CLAMP*\" if r[\"clamped_up\"] else \"\"} | '\n",
+    "        f'dAI_down={r[\"dAI_down\"]:.3f}{\"*CLAMP*\" if r[\"clamped_down\"] else \"\"} | '\n",
+    "        f'max|ΔAI|={r[\"max_abs_dAI\"]:.3f} ({r[\"direction_max\"]})'\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -186,6 +284,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Miscellaneous."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -217,10 +322,6 @@
     }
    ],
    "source": [
-    "# ========= Pillar-weight sensitivity (drop-in) =========\n",
-    "\n",
-    "from copy import deepcopy\n",
-    "\n",
     "def compute_pillar_scores(events):\n",
     "    \"\"\"Return N_k, numerators, and pillar_scores dicts using current events (independent of weights).\"\"\"\n",
     "    # reuse compute_ai with equal weights just to reuse its aggregation;\n",
